# PythonCRUD

./: docker-compose.yml  pyproject.toml
backend/: crud.py  database.py  main.py  models.py  routers.py  schemas.py
frontend/.streamlit/: config.toml
